# fuel-upload-language-experiment

./: .dockerignore  .gitignore  CLAUDE.md  CLAUDE_A.md  Dockerfile.book  FOLLOW_ON_HOLD.md  README.md  docker-compose.book.yml  okgo
archived/: README.md
archived/purescript-fuel-engine/: spago.yaml
archived/typescript-fuel-engine/: package.json  tsconfig.build.json  tsconfig.json
book/: _quarto.yml  index.qmd  references.qmd  setup.qmd
book/part1/: 01-blub-paradox.qmd  02-normal-csharp-tour.qmd  03-seven-footguns.qmd  04-idiomatic-csharp.qmd  08-haskell-safety.qmd
book/part1b/: 11-boundary-returns.qmd  13-final-takeaway.qmd
book/part2/: r2-validation.qmd  r3-recovery.qmd  r4-boundary.qmd  r6-mutability.qmd  r7-null.qmd
csharp-fuel-engine/: AGENTS.md
docs/: PROPERTY-TESTING.md  fsharp-learning-guide.md  v2-agent-log.md  v2-experiment-plan.md  v2-results.md  v2-scoring-rubric.md  v3-agent-log.md  v3-experiment-plan.md  v3-phase-briefing.md  v3-results.md  v3-scoring-rubric.md
docs/agent-notes/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-v3-0.md  phase-v3-1.md  phase-v3-2.md  phase-v3-3.md  phase-v3-4.md  phase-v3-5.md
docs/book/: book.css  index.html  references.html  setup.html
docs/book-notebooks/: index.ipynb  references.ipynb  setup.ipynb
fsharp-fuel-engine/: AGENTS.md  FSharpFuelEngine.slnx
fsharp-fuel-engine/FuelUpload.Domain/: Audit.fs  BatchSummary.fs  Decision.fs  DecisionEngine.fs  Duplicate.fs  FuelRow.fs  FuelUpload.Domain.fsproj  Interop.fs  OperationalBatchReport.fs  Primitives.fs  Validation.fs  (+1 more)
fsharp-fuel-engine/FuelUpload.Domain.Tests/: FuelUpload.Domain.Tests.fsproj  Properties.fs  Tests.fs
haskell-fuel-engine/: AGENTS.md  haskell-fuel-engine.cabal
haskell-fuel-engine/src/FuelUpload/: Api.hs  Audit.hs  DecisionEngine.hs  DuplicatePolicy.hs  Engine.hs  Report.hs  Summary.hs  Validation.hs
haskell-fuel-engine/src/FuelUpload/Domain/: Decision.hs  Duplicate.hs  Primitive.hs  Row.hs  Vehicle.hs
haskell-fuel-engine/test/: Spec.hs
haskell-fuel-engine/test/FuelUpload/: DecisionEngineSpec.hs  Properties.hs
normalcsharp-fuel-engine/: .gitignore  NormalCSharpFuelEngine.slnx  README.md
ocaml-fuel-engine/: dune-project
prompts/: apply-lessons.md
rescript-fuel-engine/: package.json  rescript.json
rust-fuel-engine/: AGENTS.md  Cargo.toml
scala3-fuel-engine/: README.md
scripts/: deploy_book_server.sh
tools/: build_book_notebooks.py  render_static_book.py  serve_quarto_book_jupyter.sh
typescript-fuel-engine/: package-lock.json
(+175 files in other folders)
