cabal-version:      3.0
name:               haskell-fuel-engine
version:            0.1.0.0
synopsis:           Pure fuel upload decision engine
license:            MIT
author:             local
maintainer:         local@example.com
build-type:         Simple

common warnings
  default-extensions:
    BlockArguments
    DerivingStrategies
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wpartial-fields
    -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  FuelUpload.Engine
  hs-source-dirs:   src
  build-depends:
      base >=4.18 && <4.20
  default-language: GHC2021

test-suite fuel-engine-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:
      base >=4.18 && <4.20
    , haskell-fuel-engine
    , hspec >=2.11 && <2.12
    , QuickCheck >=2.14 && <2.16
  default-language: GHC2021
